--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -204,7 +204,7 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  background: url('../img/svg/play-button.svg') no-repeat center;
+  background: url("../img/svg/play-button.svg") no-repeat center;
   background-size: cover;
   top: 50%;
   left: 50%;
